--- a/src/pages/contribution/contribute-page.njk
+++ b/src/pages/contribution/contribute-page.njk
@@ -23,7 +23,7 @@ eleventyComputed:
         </p>
     </div>
     <div>
-        <form data-font="sans-serif" class="contribute-story-form" data-layout="stack" data-props="y:start x:start" action="{{ contribute.tally_url }}" target="_blank" method="get" name="contribution">
+        <form class="contribute-story-form" data-layout="stack" data-props="y:start x:start" action="{{ contribute.tally_url }}" target="_blank" method="get" name="contribution">
             <label for="title">Title</label>
             <input type="text" id="title" name="title" required="true"/>
             <small>The core message in a sentence</small>
