--- a/src/_includes/layouts/story-layout.njk
+++ b/src/_includes/layouts/story-layout.njk
@@ -1,11 +1,6 @@
 {% block content %}
     {% include "partials/site-breadcrumbs.njk" %}
-    <div class="story-page-sidebar" data-layout="with-sidebar" data-props="side:right space:l">
-        <article itemscope itemtype="http://schema.org/Article" itemref="story-details" data-layout="stack" style="--space: calc(var(--space-xl) * 2);">
-            {% block main %}{% endblock %}
+        <article itemscope itemtype="http://schema.org/Article" data-layout="stack" style="--space: calc(var(--space-xl) * 2);">
+            {% block article %}{% endblock %}
         </article>
-        <aside id="story-details">
-            {% block aside %}{% endblock %}
-        </aside>
-    </div>
 {% endblock %}
