--- a/src/pages/stories/stories-page.njk
+++ b/src/pages/stories/stories-page.njk
@@ -16,17 +16,17 @@ eleventyComputed:
 <p>
     {{ page_description }}
 </p>
-<ul role="list" data-accordion data-props="noMeasure space:l">
+<ul role="list"  data-accordion data-props="noMeasure space:l">
     {%- for category in collections.categories %}
         {% set entries = collections.stories | filterByCategory(category) %}
         <details data-sticky open>
-            <summary data-font="sans-serif">
+            <summary>
                 <span>
                     {{ category }}
                 </span>
-                <span>
+                {# <span>
                     ({{ entries.length }})
-                </span>
+                </span> #}
             </summary>
             <ul class="story-cards" data-props="space:s" role="list" data-layout="grid">
                 {% for entry in collections.stories | filterByCategory(category) %}
