--- a/src/pages/stories/story-page.njk
+++ b/src/pages/stories/story-page.njk
@@ -111,19 +111,18 @@ eleventyComputed:
                     </p>
                     <div data-layout="switcher" style="--threshold: 78ch;">
                         <a data-button="primary" data-props="x:center" href="{{ story_contribution_url }}" target="_blank">
-                            <span aria-hidden="true" data-font="emoji">📄</span>
                             Submit an idea</a>
                         <a
                             data-button="primary"
                             data-props="x:center"
                             href="https://twitter.com/intent/tweet?text={{ story.name }}%20via%20@FrontendStories&url={{ meta.site_url }}{{ page.url }}"
                             target="_blank">
-                            <span aria-hidden="true" data-font="emoji">🐤</span>Mention on Twitter</a>
+                            Mention on Twitter</a>
                         <a
                             data-button="primary"
                             data-props="x:center"
                             href="mailto:{{ meta.author.email }}?subject=[FS Contribution] {{ story.name }}">
-                            <span aria-hidden="true" data-font="emoji">✉</span>Email me</a>
+                            Email me</a>
                     </div>
                 </div>
             </div>
