style: 🔥 remove unused code

--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,5 +1,5 @@
-<header>
-    <div class="padded-container header" data-layout="cluster" data-props="y:center x:between">
+<header class="padded-container" data-layout="cluster" data-props="y:center x:between">
+    {# <div class="padded-container header" data-layout="cluster" data-props="y:center x:between"> #}
         <a data-heading="5" data-link="noHover" href="/">
             <span aria-hidden="true" data-heading="4" data-font="emoji">🎓</span>
             <span class="visually-hidden">Home</span>
@@ -12,5 +12,5 @@
                 About
             </a>
         </div>
-    </div>
+    {# </div> #}
 </header>
