--- a/src/pages/stories/stories-page.njk
+++ b/src/pages/stories/stories-page.njk
@@ -2,15 +2,15 @@
 layout: layouts/nested-page-layout.njk
 title: All findings 
 page_description: Findings grouped by category.
-permalink: /findings/index.html
+permalink: /findings/
 eleventyComputed:
     description: "Explore findings from Frontend Stories. {{meta.site_description}}"
     eleventyNavigation:
-    key: Findings
-    parent: Home
+        key: Findings
+        parent: Home
 ---
 
-<h1 >
+<h1>
     {{ title }}
 </h1>
 <p>
