--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -10,6 +10,7 @@ body {
   font-family: var(--font-sans-serif);
   font-size: var(--step-0);
   background-color: var(--color-light);
+  color: var(--color-dark);
 }
 h1,
 h2,
@@ -50,13 +51,11 @@ p,
 ::-webkit-scrollbar {
   width: 10px;
   height: var(--space-2xs);
-
 }
 /* Track */
 ::-webkit-scrollbar-track {
   border-radius: 15px;
   border: var(--border-thin, 1px) solid var(--gray-300);
-
 }
 
 /* Handle */
