--- a/src/css/_tokens.css
+++ b/src/css/_tokens.css
@@ -57,6 +57,8 @@
   --text-color: var(--gray-900);
   --text-color-secondary: var(--gray-600);
 
+  --transition-duration: 300ms;
+
 }
 /*----------  TOKENS Utilities  ----------*/
 [data-props~="noPad"] {
