style: 🎨 Add dynamic dark mode and refactor code

--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,4 +1,4 @@
-<footer data-layout="switcher" data-props="invert">
+<footer data-layout="switcher">
     <div class="padded-container" data-layout="switcher" data-props="y:start">
         <div data-layout="stack" data-props="x:start">
             <h2 data-heading="6">{{meta.site_name}}</h2>
