--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -16,9 +16,7 @@ a {
 
 
 body > header {
-  width: 100%;
   min-height: var(--header-height);
-  border-bottom: var(--border-thin) solid var(--gray-200);
 }
 body > main {
   padding-top: var(--page-top);
@@ -100,10 +98,9 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
 
 [data-markdown] code {
   font-family: var(--font-monospace);
-  background-color: var(--gray-200);
-  color: #eb5757;
+  background-color: var(--color-light-accent);
   padding: calc(var(--space-2xs) * 0.5) var(--space-2xs);
-  border-radius: var(--border-radius);
+  border-radius: 0;
 }
 [data-markdown] > ol > li {
   flex-grow: 1;
@@ -150,7 +147,7 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
   border-bottom-color: transparent;
 }
 .breadcrumbs-navigation li a:hover {
-  border-bottom-color: var(--gray-900);
+  border-bottom-color: var(--color-dark);
 }
 .breadcrumbs-navigation li:not(:last-child)::after {
   content: " /   ";
@@ -170,64 +167,10 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
   flex-grow: 1;
   text-align: center;
   border-width: var(--border-thin);
-  --y-padding: 0;
+  --button-padding-y: 0;
 }
 .categories-navigation li {
   margin-left: 0;
-}
-
-
-
-/*=============================================
-=            Story card            =
-=============================================*/
-
-.story-card {
-  overflow: hidden;
-  padding: var(--space-m) var(--space-s);
-  position: relative;
-  border-radius: var(--border-radius);
-  box-shadow: var(--shadow-elevation-low);
-  transition-property: box-shadow, transform;
-  transition-duration: var(--transition-duration, 0.3s);
-  transition-timing-function: var(--bezier-snappy);
-}
-.story-card:hover,
-.story-card:focus-within {
-  box-shadow: var(--shadow-elevation-medium);
-}
-/* .story-card__cover { */
-/* height: 150px; */
-/* color: var(--gray-600); */
-/* display: flex; */
-/* justify-content: center; */
-/* align-items: center; */
-/* } */
-.story-card__ribbon {
-  right: -64px;
-  font-family: var(--font-sans-serif);
-  position: absolute;
-  top: 32px;
-  width: 206px;
-  transform: rotate(45deg);
-  background-color: var(--gray-800);
-  color: var(--gray-100);
-  text-align: center;
-}
-.story-card__title {
-  font-family: var(--font-sans-serif);
-  /* font-weight: bolder; */
-}
-/* .story-card__title:focus {
-  outline: 0px;
-} */
-.story-card__title::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 /*=============================================
@@ -237,6 +180,7 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
 .story-cards[data-layout~="grid"] {
   --grid-min-item-size: 40rem;
   --grid-placement: auto-fill;
+  --space: var(--space-l);
 }
 
 .story-pagination-navigation a:only-child {
@@ -279,23 +223,21 @@ inspiration: https://codepen.io/thierry/pen/qBqYmgw
 
 [data-accordion] summary {
   padding: var(--space-s);
-  border-bottom: var(--border-thin) solid var(--gray-200);
+  border-bottom: var(--border-thin) solid var(--color-light-accent);
   position: relative;
   display: flex;
   align-items: center;
   transition: background-color var(--transition-duration, 300ms) ease-in-out;
 }
 [data-accordion] summary:hover {
-  background-color: var(--gray-200);
+  background-color: var(--color-light-accent);
 }
 [data-accordion] summary::after {
-  content: "▶";
-  filter: grayscale(1);
+  content: "›";
   margin-left: auto;
   display: inline-block;
-  font-size: var(--step-1);
   transform-origin: center;
-  transition: transform var(--transition-duration, 300ms) ease-in-out;
+  transition: transform var(--transition-duration, 300ms) var(--bezier-snappy);
 }
 [data-accordion] details[open] > summary::after {
   transform: rotate(90deg);
@@ -330,21 +272,6 @@ summary {
   cursor: pointer;
 }
 
-input,
-select,
-textarea {
-  min-height: 46px;
-  padding-left: var(--space-2xs);
-  padding-right: var(--space-2xs);
-  border: var(--border-thin) solid;
-  border-color: var(--gray-600);
-  width: 100%;
-}
-
-
 .home-cover-section {
-  --min-height: calc(70vh - var(--header-height, 0px));
-}
-.home-cover-section p {
-  font-size: var(--step-1);
+  --min-height: calc(80vh - var(--header-height, 0px));
 }
