--- a/src/pages/categories/category-page.njk
+++ b/src/pages/categories/category-page.njk
@@ -12,7 +12,7 @@ eleventyComputed:
   eleventyNavigation:
     key: "{{category}}"
     title: "{{category}}"
-    parent: Stories
+    parent: Findings
 ---
 {% extends "layouts/category-layout.njk" %}
 {% block article %}
