--- a/src/css/_colors.css
+++ b/src/css/_colors.css
@@ -1,14 +1,28 @@
-
 :root {
-    --color-primary: hsl(225, 73%, 59%);
-    --color-light: var(--gray-100);
-    --color-dark: var(--gray-900);
-    --color-focus: var(--color-dark);
-    --color-focus-shadow: var(--gray-600);
-  
-    --border-radius: 0.5rem;
-  
-    --bezier-snappy: cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    --bezier-swift: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  --color-primary: hsl(225, 73%, 59%);
+  --color-light: var(--gray-0);
+  --color-light-accent: var(--gray-200);
+  --color-dark: var(--gray-900);
+  --color-dark-accent: var(--gray-700);
+  --color-focus: var(--color-dark);
+  --color-focus-shadow: var(--color-dark-accent);
 
+  --border-radius: 0.5rem;
+
+  --bezier-snappy: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  --bezier-swift: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-light: black;
+    --color-light-accent: var(--gray-700);
+
+    --color-dark: var(--gray-0);
+    --color-dark-accent: var(--gray-200);
   }
+  /* 
+    img[src*=".png"],img[src*="/artifacts/"],img[src*="/hire/"] {
+        filter: invert(1)
+    } */
+}
