--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -55,18 +55,18 @@ p,
 /* Track */
 ::-webkit-scrollbar-track {
   border-radius: 15px;
-  border: var(--border-thin, 1px) solid var(--gray-300);
+  border: var(--border-thin, 1px) solid var(--color-light-accent);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--gray-700);
+  background: var(--color-dark-accent);
   border-radius: 15px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--gray-900);
+  background: var(--color-dark);
 }
 
 
@@ -78,7 +78,7 @@ ol[role="list"] {
 
 :root {
   --page-top: var(--space-s-3xl, 12rem);
-  --header-height: var(--space-2xl-3xl);
+  --header-height: var(--space-3xl);
   --responsive-padding: var(--space-s-6xl);
 }
 main,
@@ -104,4 +104,16 @@ main,
   height: 1px !important;
   overflow: hidden !important;
   clip: rect(1px, 1px, 1px, 1px) !important;
+}
+
+input,
+select,
+textarea {
+  min-height: 46px;
+  padding-left: var(--space-2xs);
+  padding-right: var(--space-2xs);
+  border: var(--border-thin) solid;
+  border-color: var(--gray-600);
+  border-radius: var(--border-radius);
+  width: 100%;
 }
