--- a/src/css/_layouts.css
+++ b/src/css/_layouts.css
@@ -34,6 +34,26 @@
     filter: invert(100%);
   } */
 
+
+
+/* Slice credits: https://www.sarasoueidan.com/ */
+[data-layout~="slice"] {
+  padding-top: var(--space-l-3xl);
+  padding-bottom: var(--space-l-3xl);
+}
+
+/* 
+.slice__title {
+  margin-block-start: 0;
+  margin-block-end: .5em;
+  font-size: var(--step-4);
+  font-weight: 700;
+}
+
+.slice__description {
+  font-size: var(--step-1);
+} */
+
 /*----------  Center Layout  ----------*/
 
 [data-layout~="center"] {
