--- a/src/css/_tokens.css
+++ b/src/css/_tokens.css
@@ -34,11 +34,11 @@
 
   --measure: 70ch;
 
-  --border-thin: 1px;
+  --border-thin: 2px;
   --border-thick: 4px;
   --border-width: var(--border-thick);
 
-  --gray-50: rgb(250, 250, 250);
+  /* --gray-50: rgb(250, 250, 250);
   --gray-100: rgb(244, 244, 245);
   --gray-200: rgb(228, 228, 231);
   --gray-300: rgb(212, 212, 216);
@@ -47,15 +47,28 @@
   --gray-600: rgb(82, 82, 91);
   --gray-700: rgb(63, 63, 70);
   --gray-800: rgb(39, 39, 42);
-  --gray-900: rgb(24, 24, 27);
+  --gray-900: rgb(24, 24, 27); */
+
+  --gray-900: hsl(200 7.0% 8.8%);
+    --gray-800: hsl(195 7.1% 11.0%);
+    --gray-700: hsl(197 6.8% 13.6%);
+    --gray-600: hsl(198 6.6% 15.8%);
+    --gray-500: hsl(199 6.4% 17.9%);
+    --gray-400: hsl(201 6.2% 20.5%);
+    --gray-300: hsl(203 6.0% 24.3%);
+    --gray-200: hsl(207 5.6% 31.6%);
+    --gray-100: hsl(206 6.0% 43.9%);
+    --gray-50: hsl(206 5.2% 49.5%);
+    --gray-0: hsl(206 6.0% 63.0%);
+    --gray-1002: hsl(210 6.0% 93.0%);
 
 
   --shadow-color: 240deg 2% 66%;
   --shadow-elevation-low: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
   --shadow-elevation-medium: 0 8px 30px rgb(0,0,0,0.12);
 
-  --text-color: var(--gray-900);
-  --text-color-secondary: var(--gray-600);
+  --text-color: var(--color-dark);
+  --text-color-secondary: var(--color-dark-accent);
 
   --transition-duration: 300ms;
 
@@ -146,4 +159,3 @@
 text-align: center;
 }
 
-/*=====  End of LAYOUT UTILITIES  ======*/
