--- a/src/css/components/_buttons.css
+++ b/src/css/components/_buttons.css
@@ -1,56 +1,70 @@
 [data-button] {
   --minimum-height: 36px;
-  /* --border-radius: 0; */
+  /* outline: 1px solid red; */
   font-family: var(--font-sans-serif);
-  --y-padding: var(--space-2xs);
-  --x-padding: var(--space-s);
-  padding: var(--y-padding) var(--x-padding);
-  border-radius: var(--border-radius);
+  padding: var(--button-padding-y, var(--space-2xs)) var(--button-padding-x, var(--space-s));
+  border-radius: var(--button-border-radius, var(--border-radius));
   min-height: var(--minimum-height);
-  /* font-weight: bold; */
   line-height: var(--minimum-height);
-  /* text-align: center; */
-  text-decoration: none;
-  color: var(--color-dark);
-  background-color: var(--color-light);
+  text-decoration: var(--text-decoration);
+  color: var(--button-color, var(--color-dark));
+  background-color: var(--button-background-color, var(--color-light));
   cursor: pointer;
   display: inline-flex;
   gap: var(--space, 0);
   justify-content: var(--horizontal-alignment, flex-start);
   align-items: var(--vertical-alignment, center);
   border-style: solid;
-  border-width: var(--border-thin, 1px);
+  border-width: var(--button-border-width, var(--border-thin, 1px));
   border-color: var(--color-dark);
 }
 
-[data-button] svg{
-  flex-shrink: 0;
-}
+
 [data-button~="primary"]{
-  background-color: var(--color-dark);
-  color: var(--color-light);
+  --button-background-color: var(--color-dark);
+  --button-color: var(--color-light);
+}
+[data-button~="text"], [data-button~="tag"], [data-button~="link"]{
+  --minimum-height: auto;
+  --button-padding-y: 0;
 }
 [data-button~="text"]{
-  border-color: var(--color-light);
+  --button-padding-x: 0;
+  --button-border-width: 0;
+  --button-border-radius: 0;
 }
+[data-button~="tag"] {
+  --button-border-radius: var(--space-l);
+}
+[data-button~="link"]{
+  --button-border-width: 0;
+  --button-border-radius: 0;
+  --button-padding-x: var(--space-2xs);
+}
+
+
+/* [data-button] svg{
+  flex-shrink: 0;
+}
+
+
 [data-button~="link"]{
   border-width: var(--border-thin, 2px);
   --minimum-height: 1em;
   --border-radius: 2px;
-  --y-padding: var(--space-2xs);
-  --x-padding: var(--space-2xs);
+  --button-padding-y: var(--space-2xs);
+  --button-padding-x: var(--space-2xs);
   font-weight: normal;
 }
 [data-button~="tag"]{
   border-radius: var(--space-l);
   padding: calc(var(--space-xs) * 0.2) var(--space-xs);
   font-size: var(--step-0);
-
 }
 [data-button~="small"]{
   --minimum-height: 20px;
-  --y-padding: var(--space-2xs);
-  --x-padding: var(--space-2xs);
+  --button-padding-y: var(--space-2xs);
+  --button-padding-x: var(--space-2xs);
   font-size: var(--step--1);
 }
 
@@ -63,7 +77,7 @@
 [data-button]:disabled {
   opacity: 0.5;
   cursor: not-allowed;
-}
+} */
 
 
 
@@ -76,53 +90,48 @@
 } */
 
 
-
+/* 
 [data-link="button"] {
   --minimum-height: 36px;
   --border-radius: 2px;
-  --y-padding: var(--space-2xs);
-  --x-padding: var(--space-2xs);
-  padding: var(--y-padding) var(--x-padding);
+  --button-padding-y: var(--space-2xs);
+  --button-padding-x: var(--space-2xs);
+  padding: var(--button-padding-y) var(--button-padding-x);
   border-radius: var(--border-radius);
   min-height: var(--minimum-height);
   font-weight: bold;
   line-height: var(--minimum-height);
-  /* text-align: center; */
   text-decoration: none;
   color: var(--color-dark);
   background-color: var(--color-light);
   cursor: pointer;
   display: inline-flex;
   gap: var(--space, 0);
-
   justify-content: var(--vertical-alignment, flex-start);
   align-items: var(--horizontal-alignment, center);
   border-style: solid;
   border-width: var(--border-thin, 1px);
   border-color: var(--color-dark);
-}
+} */
 
 
-/* @media (hover: hover) { */
+@media (hover: hover) {
   /* On desktop and hover capable screens */
-  [data-link] {
+  [data-link], [data-button~="link"] {
     text-decoration: none;
   }
-  [data-link]:hover {
+  [data-link]:hover, [data-button~="link"]:hover {
     transition: box-shadow 200ms ease 0s;
-    box-shadow: 0px 2px 0px currentColor;
+    box-shadow: 0px var(--border-thick) 0px currentColor;
   }
   [data-link~="noHover"]:hover {
     transition: none;
     box-shadow: unset;
   }
 
-  [data-button]:not([disabled]):hover {
+  /* [data-button]:not([disabled]):hover {
     background-color: var(--color-dark);
     color: var(--color-light);
-  }
-/* } */
-
-[data-button~="tag"] {
-  border-radius: var(--space-l);
+  } */
 }
+
