--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -15,21 +15,24 @@ eleventyComputed:
 ---
 
 <section class="home-cover-section" data-layout="cover" data-props="noPad">
-        <div data-layout="stack" data-props="y:center centered">
-            <h1 data-heading="1">{{ meta.site_name }}
-                <span class="visually-hidden" >| {{currentCategory}}</span>
-            </h1>
-            <p>{{ hero_description or meta.site_description }}</p>
-        </div>
+    <div data-layout="stack" data-props="y:center centered">
+        <h1 class="visually-hidden" data-heading="1">{{ meta.site_name }}
+            <span >| {{ currentCategory }}</span>
+        </h1>
+        <p data-heading="1">{{ hero_description or meta.site_description }}</p>
+    </div>
 </section>
-<section id="findings" data-layout="stack" data-props="space:xs">
-    <h2 data-heading="3">Browse by categories</h2>
+<section id="findings" data-layout="stack slice" data-props="space:xs">
+    <h2 class="visually-hidden" data-heading="5">Browse by categories</h2>
     <nav class="categories-navigation">
         <ul role="list" data-layout="reel" data-props="noPad noBorder overflowing:noBar">
             {%- for category in collections.categoriesAndAll %}
-            {% set category_url = '' if category == 'All' else category | slugify %}
+                {% set category_url = '' if category == 'All' else category | slugify %}
                 <li data-layout="stack" data-active="{{ 'true' if currentCategory == category else 'false' }}">
-                    <a data-props="x:center" data-button="small {{ 'active' if currentCategory == category }} tag" href="/{{ category_url }}#findings">{{ 'Latest' if category == 'All' else category }}</a>
+                    <a
+                        data-props="x:center"
+                        data-button="small {{ 'active' if currentCategory == category }} tag"
+                        href="/{{ category_url }}#findings">{{ 'Latest' if category == 'All' else category }}</a>
                 </li>
             {% endfor -%}
         </ul>
@@ -37,7 +40,6 @@ eleventyComputed:
     <h3 data-heading="5" class="visually-hidden">
         {{ "Newest" if currentCategory == 'All' else currentCategory }}
     </h3>
-
     <ul class="story-cards" data-layout="grid" data-props="noPad space:s" role="list">
         {% set entries = collections.stories | filterByCategory(currentCategory) | limitTo(4) %}
         {%- for entry in entries %}
@@ -45,23 +47,21 @@ eleventyComputed:
         {% endfor -%}
     </ul>
     <span>
-        {% set view_all_url = "findings" if currentCategory == "All" else "categories/"+currentCategory | slugify%}
-
-        <a
-            data-button="primary"
-            href="/{{view_all_url}}">
-             Explore {{"all" if currentCategory == "All" else "related"}} findings
+        {% set view_all_url = "findings" if currentCategory == "All" else "categories/"+currentCategory | slugify %}
+        {% set see_more_button_text = "Explore all findings" if currentCategory == "All" else "Explore more findings about "+currentCategory %}
+        <a data-link href="/{{ view_all_url }}">
+            {{ see_more_button_text }}
         </a>
     </span>
 </section>
 {# <section>
-                <button data-button="primary">Base</button>
-                <button data-button="outline">Base</button>
-                <button data-button="text">Base</button>
+                <button data-button="primary">Primary</button>
+                <button data-button="outline">Outline</button>
+                <button data-button="text">Text</button>
+                <button data-button="link">Link</button>
+                <button data-button="tag">Tag</button>
                 <br/>
-                <button disabled data-button="primary">Base</button>
-                <button disabled data-button="outline">Base</button>
-                <button disabled data-button="text">Base</button>
+
                 <form action="{{ contribute.tally_url }}" target="_blank" method="get" name="contribution">
                     <label for="title">Title</label>
                     <input type="text" id="title" name="title" required="true"/>
